# time-independent-planning

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE.txt  app.cpp  index.html  readme.md
exp_scripts/: .gitignore  run.sh  run_6x6_collision.sh  run_den312d_even-1_fixed-agents.sh  run_random-32-32-10_even-1_fixed-agents.sh  run_random-32-32-10_even-1_fixed-dp.sh  run_random-64-64-20_even-1_fixed-agents.sh  run_three-bridge_collision.sh
gh-pages/: index.html
instances/: 6x6_collision_8agents.txt  den312d_even-1_100agents.txt  den312d_even-1_150agents.txt  den312d_even-1_200agents.txt  den312d_even-1_50agents.txt  random-32-32-10_even-1_10agents.txt  random-32-32-10_even-1_20agents.txt  random-32-32-10_even-1_30agents.txt  random-32-32-10_even-1_35agents.txt  random-32-32-10_even-1_40agents.txt  random-32-32-10_even-1_50agents.txt  random-32-32-10_even-1_60agents.txt  random-64-64-20_even-1_100agents.txt  random-64-64-20_even-1_150agents.txt  random-64-64-20_even-1_200agents.txt  random-64-64-20_even-1_50agents.txt  sample.txt  small-crossing_2agents.txt  three-bridge_collision_6agents.txt
map/: small-crossing.map  three-bridge.map
mapf_plan/: 6x6_collision.txt  (+17 more)
time_independent/: CMakeLists.txt
time_independent/include/: agent.hpp  causal_pibt.hpp  causal_pibt_mapf.hpp  fsp.hpp  graph.hpp  greedy.hpp  mapf_dp.hpp  mapf_random.hpp  mcp.hpp  ofApp.hpp  problem.hpp  stn.hpp  util.hpp
time_independent/src/: agent.cpp  causal_pibt.cpp  causal_pibt_mapf.cpp  fsp.cpp  graph.cpp  greedy.cpp  mapf_dp.cpp  mapf_random.cpp  mcp.cpp  problem.cpp  stn.cpp
(+3034 files in other folders)
