cmake_minimum_required(VERSION 3.1)
project(lib-time-ind)
file(GLOB SRCS "./src/*.cpp")
add_library(lib-time-ind STATIC ${SRCS})
add_definitions(-D_MAPDIR_="${CMAKE_CURRENT_LIST_DIR}/../map/")
target_compile_options(lib-time-ind PUBLIC -O3 -Wall -mtune=native -march=native)
target_compile_features(lib-time-ind PUBLIC cxx_std_17)
target_include_directories(lib-time-ind INTERFACE ./include)

add_subdirectory(../third_party/grid-pathfinding/graph ./graph)
target_link_libraries(lib-time-ind lib-graph)
